<resources>
  <string name="app_name">BF3 Droid</string>
  <string name="widget_name">Battlelog - Stats+Friends</string>
  <string name="changelog">To be determined... - @karllindmark</string>
  <string name="notice_text">&lt;b>This application is not endorsed by or affiliated with Electronic Arts Inc. &lt;/b>&lt;br />This is a
    third-party app developed by the Open Source Community.&lt;p>In order to use this application you will need to login
    using your Origin™ credentials, and the credentials will only be used in the login process you are about to
    undertake. We will &lt;b>NEVER &lt;/b> store or share your credentials in any way.&lt;p>By clicking on the checkbox
    below, you confirm that you have read this notice, and want to proceed with the login.&lt;/p>
  </string>
  <string name="agree_text">I have read the notice and want to login</string>
  <string name="general_invalid_email">Invalid e-mail address.</string>
  <string name="general_invalid_password">Please enter your password.</string>
  <string name="general_changelog_version">Changelog version {version}</string>
  <string name="general_wait">Please wait</string>
  <string name="general_downloading">Downloading the data...</string>
  <string name="general_no_data">No data found.</string>
  <string name="label_own_soldiernu">Menu</string>
  <string name="label_feed">Feed</string>
  <string name="label_friends">Friends</string>
  <string name="label_notifications">Notifications</string>
  <string name="label_own_soldier">My soldier</string>
  <string name="label_unlocks">My unlocks</string>
  <string name="label_find_soldier">Find soldier</string>
  <string name="label_find_platoon">Find platoon</string>
  <string name="label_compare_bs">Compare battle scars</string>
  <string name="label_settings">Settings</string>
  <string name="status_empty_input">Please enter a status text to continue.</string>
  <string name="status_error_unknown">An error has occurred: please relogin and try again.</string>
  <string name="general_empty_user">You need to enter a username</string>
  <string name="info_profile_soldier">View soldier profile of...</string>
  <string name="info_profile_platoon">View the platoon profile for...</string>
  <string name="general_empty_name">You need to enter a name</string>
  <string name="label_chat_open">Open chat</string>
  <string name="label_soldier_view">View soldier</string>
  <string name="label_hooah">Hooah!</string>
  <string name="label_unhooah">Un-hooah!</string>
  <string name="label_comment_view">View comments</string>
  <string name="msg_unimplemented">Unimplemented functionality.</string>
  <string name="info_feed_empty">No feed items found.</string>
  <string name="label_wait">Please wait...</string>
  <string name="label_com_handle">COM CENTER ({num} ONLINE)</string>
  <string name="lable_refresh">Refresh now</string>
  <string name="label_home">Home</string>
  <string name="label_stats">Stats</string>
  <string name="label_users">Users</string>
  <string name="info_platoon_created">Created on {DATE} ({RELATIVE DATE})</string>
  <string name="label_members">MEMBERS</string>
  <string name="label_fans">FANS</string>
  <string name="info_platoon_compare">You can\'t compare platoons... (yet?)</string>
  <string name="info_empty_msg">You\'re not allowed to post an empty message.</string>
  <string name="info_profile_online">Online but not currently playing</string>
  <string name="info_profile_playing">Playing on {server name}</string>
  <string name="info_profile_empty_pres">No presentation found.</string>
  <string name="info_hooah_s">{num} hooah</string>
  <string name="info_hooah_p">{num} hooahs</string>
  <string name="info_comment_s">{num} comment</string>
  <string name="info_comment_p">{num} comments</string>
  <string name="label_playing">Playing</string>
  <string name="label_online">Online</string>
  <string name="label_offline">Offline</string>
  <string name="msg_chat_norefresh">Chat could not be refreshed.</string>
  <string name="label_sending">Sending...</string>
  <string name="label_send">Send</string>
  <string name="msg_chat_ok">Message sent!</string>
  <string name="msg_chat_fail">Message could not be sent!</string>
  <string name="msg_comment_ok">Comment posted!</string>
  <string name="msg_comment_fail">Comment could not be posted!</string>
  <string name="msg_comment_norefresh">Comments could not be refreshed.</string>
  <string name="msg_com_ok">COM CENTER up to date.</string>
  <string name="msg_com_fail">COM CENTER could not be refreshed.</string>
  <string name="msg_hooah_fail">Hooah failed!</string>
  <string name="msg_search_nouser">No user found matching the following keyword: {keyword}</string>
  <string name="msg_search_noplatoon">No platoon found matching the following keyword: {keyword}</string>
  <string name="msg_frequest_ok">Friend request sent!</string>
  <string name="msg_frequest_fail">Friend request could not be sent.</string>
  <string name="msg_logging_in">Logging in...</string>
  <string name="msg_login_fail">Login failed.</string>
  <string name="msg_logout">Logging out...</string>
  <string name="msg_error">An error has occurred.</string>
  <string name="msg_prequest_ok">You applied for the platoon.</string>
  <string name="msg_prequest_fail_pres">You could not apply due to platform restrictions.</string>
  <string name="msg_prequest_fail_full">You could not apply due to the platoon being full.</string>
  <string name="msg_prequest_fail_error">An error occured while applying for the platoon.</string>
  <string name="msg_platoon_left">You left the platoon.</string>
  <string name="msg_platoon_left_fail">An error occured while leaving the platoon.</string>
  <string name="msg_feed_ok">Message posted successfully!</string>
  <string name="msg_feed_fail">Message could not be posted (you may have reached your limit).</string>
  <string name="msg_notification">Someone has interacted with you on Battlelog!</string>
  <string name="msg_status">Updating your status...</string>
  <string name="msg_status_ok">Status updated successfully.</string>
  <string name="msg_status_fail">Your status could not be updated.</string>
  <string name="info_feed_comment_own">&lt;b>{username}&lt;/b> commented on your &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_comment_other">&lt;b>{username}&lt;/b> commented on &lt;b>{owner}&lt;/b>\' &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_comment_other_v2">&lt;b>{username}&lt;/b> commented on &lt;b>{owner}&lt;/b>\'s &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_comment_own_2">&lt;b>{username}&lt;/b> also commented on your &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_comment_other_2">&lt;b>{username}&lt;/b> also commented on &lt;b>{owner}&lt;/b>\' &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_comment_other_v2_2">&lt;b>{username}&lt;/b> also commented on &lt;b>{owner}&lt;/b>\'s &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_post_own">&lt;b>{username}&lt;/b> wrote in your &lt;b>Battle feed&lt;/b>.</string>
  <string name="info_feed_hooah_own">&lt;b>{username}&lt;/b> hooahs your &lt;b>{action}&lt;/b>.</string>
  <string name="info_feed_hooah_other">&lt;b>{username}&lt;/b> hooahs &lt;b>{owner}&lt;/b>\' &lt;b>{action}&lt;/b>.
  </string>
  <string name="info_feed_hooah_other_2">&lt;b>{username}&lt;/b> hooahs &lt;b>{owner}&lt;/b>\'s &lt;b>{action}&lt;/b>.
  </string>
  <string name="info_platoon_join_ok">&lt;b>{username}&lt;/b> accepted your request to join &lt;b>{platoon}&lt;/b>.
  </string>
  <string name="info_platoon_join_no">&lt;b>{username}&lt;/b> denied your request to join &lt;b>{platoon}&lt;/b>.
  </string>
  <string name="info_platoon_join_request">&lt;b>{username}&lt;/b> wants to join &lt;b>{platoon}&lt;/b>.</string>
  <string name="info_platoon_join_request_ok">&lt;b>{username}&lt;/b> joined your platoon &lt;b>{platoon}&lt;/b>.
  </string>
  <string name="info_platoon_left">&lt;b>{username}&lt;/b> left the platoon &lt;b>{platoon}&lt;/b>.</string>
  <string name="info_unknown_notification">Unknown notification type.</string>
  <string name="info_friendship">friendship</string>
  <string name="info_forum_post">forum post</string>
  <string name="info_blog_comment">blog comment</string>
  <string name="info_game_report">game report</string>
  <string name="info_wallpost">wall post</string>
  <string name="info_status_message">status message</string>
  <string name="info_award">award</string>
  <string name="info_battle_report">Battle report</string>
  <string name="info_platoon_wall_post">platoon wall post</string>
  <string name="info_lastlogin">Last logged in {date}</string>
  <string name="info_time_second">{seconds} second ago</string>
  <string name="info_time_second_p">{seconds} seconds ago</string>
  <string name="info_time_min">{minutes} minute ago</string>
  <string name="info_time_min_p">{minutes} minutes ago</string>
  <string name="info_time_hour">{hours} hour ago</string>
  <string name="info_time_hour_p">{hours} hours ago</string>
  <string name="info_time_day">{days} day ago</string>
  <string name="info_time_day_p">{days} days ago</string>
  <string name="info_time_week">{weeks} week ago</string>
  <string name="info_time_week_p">{weeks} weeks ago</string>
  <string name="info_time_year">{years} year ago</string>
  <string name="info_time_year_p">{years} years ago</string>
  <string name="info_connect_bl">Connect to Battlelog</string>
  <string name="info_widget_friends_online">Friends online:</string>
  <string name="msg_widget_auth_fail">Authentication failed - is your password saved?</string>
  <string name="info_xml_chat_empty">No messages found</string>
  <string name="label_com_handle_default">COM CENTER (0 ONLINE)</string>
  <string name="info_hint_comment_msg">Type a message</string>
  <string name="info_xml_comment_empty">No comments found</string>
  <string name="info_xml_rank">Rank</string>
  <string name="info_xml_kills">Kills</string>
  <string name="info_xml_assists">Assists</string>
  <string name="info_xml_vehicles_destroyed">Vehicles destroyed</string>
  <string name="info_xml_vehicles_assisted_with">Vehicles assisted with</string>
  <string name="info_xml_heals">Heals</string>
  <string name="info_xml_revives">Revives</string>
  <string name="info_xml_repairs">Repairs</string>
  <string name="info_xml_resupplies">Resupplies</string>
  <string name="info_xml_deaths">Deaths</string>
  <string name="info_xml_kd_ratio">KD-ratio</string>
  <string name="info_xml_wins">Wins</string>
  <string name="info_xml_losses">Losses</string>
  <string name="info_xml_wl_ratio">W/L-ratio</string>
  <string name="info_xml_accuracy">Accuracy</string>
  <string name="info_xml_longest_headshot">Longest headshot</string>
  <string name="info_xml_longest_killstreak">Longest killstreak</string>
  <string name="info_xml_skill_rating">Skill rating</string>
  <string name="info_xml_time_played">Time played</string>
  <string name="info_xml_score_minute">Score/minute</string>
  <string name="info_xml_quits">Quits</string>
  <string name="info_xml_mcom_defence_kills">MCOM Defence Kills</string>
  <string name="info_xml_mcom_destroyed">MCOM Destroyed</string>
  <string name="info_xml_conq_flag_captured">Flag Captured(Conquest)</string>
  <string name="info_xml_conq_flag_defended">Flag Defended(Conquest)</string>
  <string name="info_xml_avenger_kills">Avenger Kills</string>
  <string name="info_xml_savior_kills">Savior Kills</string>
  <string name="info_xml_dogtag_taken">Dogtag Taken</string>
  <string name="info_xml_ctf_capture_flag">Capture Flag(CTF)</string>
  <string name="info_xml_score">Score</string>
  <string name="info_xml_rank2">until rank up</string>
  <string name="title_profile">BF3 Droid - Profile</string>
  <string name="popup_image_assignment">Assignment image</string>
  <string name="popup_objectives">Objectives</string>
  <string name="popup_rewards">REWARDS</string>
</resources>