<?xml version="1.0" encoding="utf-8"?><!--
	This file is part of BF3 Droid

    BF3 Droid is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BF3 Droid is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/Match"
  android:background="@color/white">

  <RelativeLayout
    style="@style/StandardPopup"
    android:minHeight="@dimen/min_size"
    android:minWidth="@dimen/min_size"
    android:padding="@dimen/padding_medium">

    <ImageView
      android:id="@+id/image_assignment"
      style="@style/Wrap"
      android:layout_centerHorizontal="true"
      android:clickable="true"
      android:onClick="onClick"
      android:paddingBottom="@dimen/padding_small"
      android:contentDescription="@string/popup_image_assignment" />

    <TextView
      android:id="@+id/label_objectives"
      style="@style/InfoSubHeading"
      android:layout_width="fill_parent"
      android:layout_below="@id/image_assignment"
      android:padding="@dimen/padding_small"
      android:text="@string/popup_objectives" />

    <LinearLayout
      android:id="@+id/wrap_objectives"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label_objectives"
      android:orientation="vertical" />

    <TextView
      android:id="@+id/label_rewards"
      style="@style/InfoSubHeading"
      android:layout_width="fill_parent"
      android:layout_below="@id/wrap_objectives"
      android:padding="@dimen/padding_small"
      android:text="@string/popup_rewards"
      android:textColor="@color/black" />

    <LinearLayout
      android:id="@+id/wrap_rewards"
      style="@style/MatchWidth"
      android:layout_below="@id/label_rewards"
      android:layout_marginTop="@dimen/padding_small"
      android:layout_centerHorizontal="true"/>
  </RelativeLayout>

</ScrollView>